# WBC-four-leg-robot-controller

./: CMakeLists.txt
FloatingBasedDynamics/: CMakeLists.txt
FloatingBasedDynamics/inc/: floatingBasedDynamics.h
FloatingBasedDynamics/src/: floatingBasedDynamics.cpp
Goldfarb_Optimizer/: QuadProg++.hh
KFStateEstimator/: CMakeLists.txt
KFStateEstimator/inc/: KFStateEsimator.h
KFStateEstimator/src/: KFStateEstimator.cpp
TOOLS/: CMakeLists.txt
TOOLS/inc/: tools.h
TOOLS/src/: tools.cpp
WBC/: CMakeLists.txt
WBC/inc/: WBC.h
WBC/src/: WBC.cpp
python/: WbcController.py  gait.py  groundEstimator.py  locomotion.py  main.py  robot.py  stanceLeg.py  stateEstimator.py  swingLeg.py
